# spoolbuddy

./: .gitignore  CABLING_PLAN.md  CLAUDE.md  Cargo.toml  HARDWARE.md  README.md  SPOOLSTATION_PLAN.md  release-firmware.sh
.github/workflows/: firmware-release.yml  security.yml
backend/: main.py  models.py  requirements.txt
backend/api/: device.py  firmware.py  printers.py
backend/db/: database.py
backend/mqtt/: client.py
backend/tests/unit/: test_database.py
eez/: spoolbuddy.eez-project
eez/src/ui/: images.h  screens.c
firmware/: Cargo.toml  espflash.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/eez_ui/: ui.c  ui_backend.c  ui_internal.h  ui_nfc_card.c  ui_scan_result.c
firmware/lvgl-configs/: lv_conf.h
firmware/src/: backend_client.rs  http_screenshot.rs  main.rs  nfc_bridge_manager.rs  ota_manager.rs  wifi_init.rs
firmware/src/nfc/: mod.rs  pn5180.rs
firmware/src/scale/: mod.rs  nau7802.rs
frontend/: package-lock.json  package.json
frontend/src/components/: AmsCard.tsx  ConfigureAmsSlotModal.tsx
frontend/src/lib/: api.ts  websocket.tsx
frontend/src/pages/: Dashboard.tsx  Printers.tsx  Settings.tsx
lvgl-simulator-sdl/: CMakeLists.txt  backend_client.c  backend_client.h  lv_conf.h  main.c  sync_and_build.sh
lvgl-simulator-sdl/ui/: screens.c  ui.c  ui_backend.c  ui_nfc_card.c
lvgl-simulator/include/: lv_conf.h
lvgl-simulator/src/: main.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/api/: device.rs  mod.rs  printers.rs  spools.rs
server/src/db/: mod.rs  schema.rs
server/src/websocket/: device.rs  mod.rs  ui.rs
simulator/: Cargo.toml  start.sh
simulator/src/: main.rs
squareline/: SpoolBuddy.sll  SpoolBuddy.slp  SpoolBuddy.spj  SpoolBuddy_test.sll  SpoolBuddy_test.spj  SquareLine_Project.sll  SquareLine_Project.spj  project.info  ui.h
squareline/screens/: ui_Screen1.c  ui_Screen1.h
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: index.css
web/src/components/: Layout.tsx
web/src/lib/: api.ts  websocket.tsx
web/src/pages/: Dashboard.tsx  Inventory.tsx  Printers.tsx  Settings.tsx
